--- a/portfolio1/index.html
+++ b/portfolio1/index.html
@@ -102,7 +102,7 @@
 						<a href="recursos.html">RECURSOS</a>
 					</li>
 					<li>
-						<a href="contacto.html">CONTACTO</a>
+						<a href="contacto.html">tequiero</a>
 					</li>
 				</ul>
 			</div>
