--- a/portfolio1/index.html
+++ b/portfolio1/index.html
@@ -99,10 +99,10 @@
 						<a href="eljuego.html">EL JUEGO</a>
 					</li>
 					<li>
-						<a href="recursos.html">RECURSOS</a>
+						<a href="recursos.html">tequiero</a>
 					</li>
 					<li>
-						<a href="contacto.html">tequiero</a>
+						<a href="contacto.html">yotambien</a>
 					</li>
 				</ul>
 			</div>
